--- a/-myportfolio/index.html
+++ b/-myportfolio/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link rel="preload" as="font" href="./src/fonts/Avenir.ttf" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" as="font" href="./src/fonts/Valencia.ttf" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" as="font" href="./src/fonts/sansha.ttf" type="font/ttf" crossorigin="anonymous">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
   </head>
